# GameMatch-Personalized-Game-Recommendation-Engine

./: .env.example  .gitignore  README.md  docker-compose.yml  gamematch_enhanced_demo.py  pyproject.toml  quick_start.py  requirements-dev.txt  requirements.txt  run_dashboard.py  run_production_api.py  setup.sh  setup_environment.py  start_services.py  test_simple.html
config/: finetuning_config.json
data/processed/: steam_dataset_analysis.json
notebooks/: 01_steam_data_exploration.py
scripts/: analyze_model_performance.py  check_finetuning_status.py  demo_recommendations.py  run_dashboard.py  run_finetuning.py  simple_demo.py  test_enhanced_model.py  test_overfitting_fixes.py  view_sample_data.py
src/api/: main.py
src/dashboard/: gamematch_dashboard.py
src/data/: dataset_loader.py
src/models/: advanced_prompt_engineering.py  advanced_rag_system.py  experimental_evaluation.py  gamematch_enhanced_training_data.jsonl  gamematch_training_data.jsonl  gaming_ontology.py  mlops_monitoring.py  openai_finetuning.py  pytorch_embeddings.py
src/web/: __init__.py  dashboard.py  mssql_auth.py
src/web/static/css/: main.css
src/web/static/js/: dashboard.js
src/web/templates/: dashboard.html  login.html  register.html
